@@ -899,6 +899,7 @@ about.text=jEdit is brought to you by\n\
 	Greg Cooper\n\
 	Greg Merrill\n\
 	Ian Maclean\n\
+	Igor Lesik\n\
 	Israel Olalla\n\
 	Jamie LaScolea\n\
 	Jason Ginchereau\n\
